--- a/Convolutional_blur/DE1_SOC_D8M_LB_RTL/DE1_SOC_D8M_LB_RTL.qsf
+++ b/Convolutional_blur/DE1_SOC_D8M_LB_RTL/DE1_SOC_D8M_LB_RTL.qsf
@@ -306,6 +306,8 @@ set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 
 
 
+set_global_assignment -name VERILOG_CONSTANT_LOOP_LIMIT 10000
+set_global_assignment -name SYSTEMVERILOG_FILE V/conv_kernel_sobel.sv
 set_global_assignment -name SYSTEMVERILOG_FILE V/conv_kernel.sv
 set_global_assignment -name SYSTEMVERILOG_FILE V/sliding_window.sv
 set_global_assignment -name VERILOG_FILE DE1_SOC_D8M_LB_RTL.v
@@ -355,5 +357,5 @@ set_global_assignment -name VERILOG_FILE V_D8M/VGA_READ_COUNTER.v
 set_global_assignment -name VERILOG_FILE de1_soc_d8m_lb_rtl.v
 set_global_assignment -name VERILOG_FILE Verilog1.v
 set_global_assignment -name VERILOG_FILE V/RGB_Process.v
-set_global_assignment -name VERILOG_CONSTANT_LOOP_LIMIT 10000
+set_global_assignment -name SYSTEMVERILOG_FILE V/kernel.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
