--- a/HSV_denoise/DE1_SOC_D8M_LB_RTL.qsf
+++ b/HSV_denoise/DE1_SOC_D8M_LB_RTL.qsf
@@ -6,7 +6,7 @@ set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
 set_global_assignment -name TOP_LEVEL_ENTITY "DE1_SOC_D8M_LB_RTL"
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 15.1.0
-set_global_assignment -name LAST_QUARTUS_VERSION "19.1.0 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "20.1.0 Standard Edition"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "09:52:34 APRIL 27,2016"
 set_global_assignment -name DEVICE_FILTER_PACKAGE FBGA
 set_global_assignment -name DEVICE_FILTER_PIN_COUNT 896
@@ -307,6 +307,8 @@ set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 
 
 set_global_assignment -name VERILOG_CONSTANT_LOOP_LIMIT 10000
+set_global_assignment -name VERILOG_FILE ../../EEC181_Lab2/hdl/Hex27Seg.v
+set_global_assignment -name VERILOG_FILE V/box.v
 set_global_assignment -name VERILOG_FILE V/HSV.v
 set_global_assignment -name SYSTEMVERILOG_FILE V/denoise.sv
 set_global_assignment -name SYSTEMVERILOG_FILE V/conv_kernel.sv
@@ -358,4 +360,6 @@ set_global_assignment -name VERILOG_FILE V_D8M/VGA_READ_COUNTER.v
 set_global_assignment -name VERILOG_FILE de1_soc_d8m_lb_rtl.v
 set_global_assignment -name VERILOG_FILE Verilog1.v
 set_global_assignment -name VERILOG_FILE V/RGB_Process.v
+set_global_assignment -name VERILOG_FILE V/ball.v
+set_global_assignment -name VERILOG_FILE V/draw_ball.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
