--- a/HSV_denoise/DE1_SOC_D8M_LB_RTL.qsf
+++ b/HSV_denoise/DE1_SOC_D8M_LB_RTL.qsf
@@ -307,6 +307,7 @@ set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 
 
 set_global_assignment -name VERILOG_CONSTANT_LOOP_LIMIT 10000
+set_global_assignment -name VERILOG_FILE V/box.v
 set_global_assignment -name VERILOG_FILE V/HSV.v
 set_global_assignment -name SYSTEMVERILOG_FILE V/denoise.sv
 set_global_assignment -name SYSTEMVERILOG_FILE V/conv_kernel.sv
